tweaks, fix links in docs; readability: avoid wide paragraphs (still works on iPod touch as well at least, if zoomed in)

--- a/doc/style.css
+++ b/doc/style.css
@@ -1,3 +1,11 @@
+/* don't make too wide paragraphs, work nicely when zoomed on the iPod touch asw ell */
+.document {
+width: 8.5in;
+margin-left: auto;
+margin-right: auto;
+font-size: 17px;
+}
+
 /*
 :Author: David Goodger (goodger@python.org)
 :Id: $Id: html4css1.css 5196 2007-06-03 20:25:28Z wiemann $
